--- a/Mandatum/UI/Views/Board/KanbanColumnPatrial.cshtml
+++ b/Mandatum/UI/Views/Board/KanbanColumnPatrial.cshtml
@@ -17,7 +17,7 @@
         }
         @foreach (var taskModel in Model.Item2)
         {
-            <div><a asp-action="EditTask" asp-route-task="@taskModel" asp-route-boardId="@ViewBag.boardId" class="button">@taskModel.Topic</a></div>
+            <div><a asp-action="EditTask" asp-route-task="@taskModel" asp-route-boardId="@ViewBag.boardId" class="button style2">@taskModel.Topic</a></div>
             <br>
         }
 
