new task button

--- a/Mandatum/UI/Views/Board/EditTask.cshtml
+++ b/Mandatum/UI/Views/Board/EditTask.cshtml
@@ -25,17 +25,39 @@
                     <div class="form-group">
 	                    <label>Статус</label>
 	                    <div>
-		                    <input asp-for="Status" value="2" type="radio" name="status" id="inWait" checked>
+		                    @if (Model.Status == TaskStatus.InWait)
+		                    {
+			                    <input asp-for="Status" value="2" type="radio" name="status" id="inWait" checked>
+		                    }
+		                    @if (Model.Status != TaskStatus.InWait)
+		                    {
+			                    <input asp-for="Status" value="2" type="radio" name="status" id="inWait">
+		                    }
+		                    
 		                    <label for="inWait">Не начато</label>
 	                    </div>
 	                    <div>
-		                    <input asp-for="Status" value="0" type="radio" name="status" id="inProgress">
+		                    @if (Model.Status == TaskStatus.InProgress)
+		                    {
+			                    <input asp-for="Status" value="0" type="radio" name="status" id="inProgress" checked>
+		                    }
+		                    @if (Model.Status != TaskStatus.InProgress)
+		                    {
+			                    <input asp-for="Status" value="0" type="radio" name="status" id="inProgress">
+		                    }		                    
 		                    <label for="inProgress">В процессе</label>
 	                    </div>
-	                     <div>
-                            <input asp-for="Status" value="1" type="radio" name="status" id="done">
-                            <label for="done">Готово</label>
-                        </div>
+	                    <div>
+		                    @if (Model.Status == TaskStatus.Done)
+		                    {
+			                    <input asp-for="Status" value="1" type="radio" name="status" id="done" checked>
+		                    }
+		                    @if (Model.Status != TaskStatus.Done)
+		                    {
+			                    <input asp-for="Status" value="1" type="radio" name="status" id="done">
+		                    }
+		                    <label for="done">Готово</label>
+	                    </div>
                     </div>
                  
                     <div class="form-group">
