--- a/Mandatum/UI/Views/Board/EditTask.cshtml
+++ b/Mandatum/UI/Views/Board/EditTask.cshtml
@@ -69,8 +69,8 @@
                 
                     <br>
     
-                    <button class="btn btn-primary m-2 p-2" type="submit">Сохранить</button>
-                    <a asp-action="SaveTask" asp-route-boardId="@ViewBag.boardId" class="btn btn-primary m-2 p-2">Отмена</a>
+                    <button class="button" type="submit">Сохранить</button>
+                    <a asp-action="CancelTask" asp-route-boardId="@ViewBag.boardId" class="btn btn-primary m-2 p-2">Отмена</a>
                 </form>
         </div>
     </div>
