--- a/Mandatum/UI/Views/Board/AllBoards.cshtml
+++ b/Mandatum/UI/Views/Board/AllBoards.cshtml
@@ -1,5 +1,7 @@
 ﻿<!DOCTYPE HTML>
 
+@model IEnumerable<BoardModel>
+
 <div id="page-wrapper">
     <section id="header" class="wrapper">
         @await Html.PartialAsync("NavBarPartial")
@@ -8,38 +10,12 @@
     <section id="highlights" class="wrapper style2">
         <div class="title">Все доски</div>
         <div class="container">
-            <div class="row aln-center">
-                <div class="col-4 col-12-medium">
-                    <section class="highlight">
-                        <a href="#" class="image featured"><img src="images/pic02.jpg" alt=""/></a>
-                        <h3><a href="#">Aliquam diam consequat</a></h3>
-                        <p>Eget mattis at, laoreet vel amet sed velit aliquam diam ante, dolor aliquet sit amet vulputate mattis amet laoreet lorem.</p>
-                        <ul class="actions">
-                            <li><a href="#" class="button style1">Learn More</a></li>
-                        </ul>
-                    </section>
-                </div>
-                <div class="col-4 col-12-medium">
-                    <section class="highlight">
-                        <a href="#" class="image featured"><img src="images/pic03.jpg" alt=""/></a>
-                        <h3><a href="#">Nisl adipiscing sed lorem</a></h3>
-                        <p>Eget mattis at, laoreet vel amet sed velit aliquam diam ante, dolor aliquet sit amet vulputate mattis amet laoreet lorem.</p>
-                        <ul class="actions">
-                            <li><a href="#" class="button style1">Learn More</a></li>
-                        </ul>
-                    </section>
-                </div>
-                <div class="col-4 col-12-medium">
-                    <section class="highlight">
-                        <a href="#" class="image featured"><img src="images/pic04.jpg" alt=""/></a>
-                        <h3><a href="#">Mattis tempus lorem</a></h3>
-                        <p>Eget mattis at, laoreet vel amet sed velit aliquam diam ante, dolor aliquet sit amet vulputate mattis amet laoreet lorem.</p>
-                        <ul class="actions">
-                            <li><a href="#" class="button style1">Learn More</a></li>
-                        </ul>
-                    </section>
-                </div>
-            </div>
+            @foreach (var boardModel in Model)
+            {
+                <a asp-action="OpenBoard" asp-route-boardId="@boardModel.Id" class="image featured"><img src="/images/kanban.png" alt="@boardModel.Id"/></a>
+                <a asp-action="OpenBoard" asp-route-boardId="@boardModel.Id" class="button style1">Перейти</a>
+            }
+        
         </div>
     </section>
 </div>
