--- a/Mandatum/UI/Views/Board/KanbanBoard.cshtml
+++ b/Mandatum/UI/Views/Board/KanbanBoard.cshtml
@@ -12,7 +12,7 @@
 	</section>
 
 <section id="main" class="wrapper style2">
-	<div class="title">Имя доски</div>
+	<div class="title">@ViewBag.boardName</div>
 	<section id="highlights" class="wrapper style2">
 		<div class="container">
 			<div class="row aln-center">
