--- a/Mandatum/UI/Views/Board/AllBoards.cshtml
+++ b/Mandatum/UI/Views/Board/AllBoards.cshtml
@@ -16,8 +16,9 @@
                 
                     <div class="col-4 col-12-medium">
                         <section class="highlight">
-                            <a asp-action="OpenBoard" asp-route-boardId="@boardModel.Id" asp-route-boardFormat="@boardModel.Format" class="image featured"><img src="/images/kanban.png" alt="@boardModel.Id"/></a>
-                        </section>
+                            <a asp-action="OpenBoard" asp-route-boardId="@boardModel.Id" asp-route-boardFormat="@boardModel.Format" class="image featured"><img src="/images/kanban.png" alt="@boardModel.Name"/></a>
+                            <a asp-action="OpenBoard" asp-route-boardId="@boardModel.Id" asp-route-boardFormat="@boardModel.Format" class="button style1">@boardModel.Name</a>
+                            </section>
                     </div>
                     
             }
