--- a/Mandatum/UI/Views/Board/KanbanColumnPatrial.cshtml
+++ b/Mandatum/UI/Views/Board/KanbanColumnPatrial.cshtml
@@ -1,6 +1,5 @@
 ﻿@using TaskStatus = Mandatum.Models.TaskStatus
 @model Tuple<TaskStatus, IEnumerable<TaskModel>>
-
 <div class="col-4 col-12-medium">
     <section class="highlight">
         @if (Model.Item1 == TaskStatus.InWait)
@@ -17,7 +16,7 @@
         }
         @foreach (var taskModel in Model.Item2)
         {
-            <div><a asp-action="EditTask" asp-route-task="@taskModel" asp-route-boardId="@ViewBag.boardId" class="button style2">@taskModel.Topic</a></div>
+            <div><a asp-action="EditTask" asp-route-task="@taskModel" asp-route-taskId="@taskModel.Id", class="button style2">@taskModel.Topic</a></div>
             <br>
         }
 
