--- a/Mandatum/UI/Views/Board/EditTask.cshtml
+++ b/Mandatum/UI/Views/Board/EditTask.cshtml
@@ -16,7 +16,7 @@
 	            @if (ViewBag.Method == "CreateTask")
 	            {
 		            <form asp-action="SaveTask" asp-route-boardId="@ViewBag.boardId" method="post" enctype="multipart/form-data" class="p-2">
-         <div class="form-group">
+							 <div class="form-group">
         			            <label>Имя</label>
         			            <div><span asp-validation-for="Topic"></span></div>
         			            <input asp-for="Topic" class="form-control" type="text">
@@ -71,7 +71,9 @@
         
         		            <button class="button" type="submit">Сохранить</button>
         		            <a asp-action="CancelTask" asp-route-boardId="@ViewBag.boardId" class="btn btn-primary m-2 p-2">Отмена</a>
-        	            </form>}
+        	            </form>
+		            
+	            }
 	             @if (ViewBag.Method == "EditTask")
                 {
                     <form asp-action="UpdateTask" asp-route-boardId="@ViewBag.boardId" method="post" enctype="multipart/form-data" class="p-2">
@@ -129,7 +131,7 @@
 
 		            <br>
 
-		            <button class="button" type="submit">Сохранить</button>
+		            <button class="button" type="submit">Редактировать</button>
 		            <a asp-action="CancelTask" asp-route-boardId="@ViewBag.boardId" class="btn btn-primary m-2 p-2">Отмена</a>
 	            </form>
 	            }
