--- a/Mandatum/UI/Views/Board/EditTask.cshtml
+++ b/Mandatum/UI/Views/Board/EditTask.cshtml
@@ -1,8 +1,4 @@
-﻿
-@using TaskStatus = Mandatum.Models.TaskStatus
-
-
-@model TaskModel
+﻿@model TaskModel
 
 <div id="page-wrapper">
 <section id="header" class="wrapper">
@@ -16,124 +12,19 @@
 	            @if (ViewBag.Method == "CreateTask")
 	            {
 		            <form asp-action="SaveTask" asp-route-boardId="@ViewBag.boardId" method="post" enctype="multipart/form-data" class="p-2">
-							 <div class="form-group">
-        			            <label>Имя</label>
-        			            <div><span asp-validation-for="Topic"></span></div>
-        			            <input asp-for="Topic" class="form-control" type="text">
-        		            </div>
-        
-        		            <div class="form-group">
-        			            <label>Статус</label>
-        			            <div>
-        				            @if (Model.Status == TaskStatus.InWait)
-        				            {
-        					            <input asp-for="Status" value="2" type="radio" name="status" id="inWait" checked>
-        				            }
-        				            @if (Model.Status != TaskStatus.InWait)
-        				            {
-        					            <input asp-for="Status" value="2" type="radio" name="status" id="inWait">
-        				            }
-        
-        				            <label for="inWait">Не начато</label>
-        			            </div>
-        			            <div>
-        				            @if (Model.Status == TaskStatus.InProgress)
-        				            {
-        					            <input asp-for="Status" value="0" type="radio" name="status" id="inProgress" checked>
-        				            }
-        				            @if (Model.Status != TaskStatus.InProgress)
-        				            {
-        					            <input asp-for="Status" value="0" type="radio" name="status" id="inProgress">
-        				            }
-        				            <label for="inProgress">В процессе</label>
-        			            </div>
-        			            <div>
-        				            @if (Model.Status == TaskStatus.Done)
-        				            {
-        					            <input asp-for="Status" value="1" type="radio" name="status" id="done" checked>
-        				            }
-        				            @if (Model.Status != TaskStatus.Done)
-        				            {
-        					            <input asp-for="Status" value="1" type="radio" name="status" id="done">
-        				            }
-        				            <label for="done">Готово</label>
-        			            </div>
-        		            </div>
-        
-        		            <div class="form-group">
-        			            <label>Описание</label>
-        			            <div><span asp-validation-for="Description"></span></div>
-        			            <textarea asp-for="Description" class="form-control" rows="3"></textarea>
-        		            </div>
-        
-        
-        		            <br>
-        
-        		            <button class="button" type="submit">Сохранить</button>
-        		            <a asp-action="CancelTask" asp-route-boardId="@ViewBag.boardId" class="btn btn-primary m-2 p-2">Отмена</a>
-        	            </form>
+			            @await  Html.PartialAsync("TaskFormRartial")
+			            <button class="button" type="submit">Сохранить</button>
+        	            <a asp-action="CancelTask" asp-route-boardId="@ViewBag.boardId" class="btn btn-primary m-2 p-2">Отмена</a>
+        	        </form>
 		            
 	            }
 	             @if (ViewBag.Method == "EditTask")
                 {
-                    <form asp-action="UpdateTask" asp-route-boardId="@ViewBag.boardId" method="post" enctype="multipart/form-data" class="p-2">
-
-		            <div class="form-group">
-			            <label>Имя</label>
-			            <div><span asp-validation-for="Topic"></span></div>
-			            <input asp-for="Topic" class="form-control" type="text">
-		            </div>
-
-		            <div class="form-group">
-			            <label>Статус</label>
-			            <div>
-				            @if (Model.Status == TaskStatus.InWait)
-				            {
-					            <input asp-for="Status" value="2" type="radio" name="status" id="inWait" checked>
-				            }
-				            @if (Model.Status != TaskStatus.InWait)
-				            {
-					            <input asp-for="Status" value="2" type="radio" name="status" id="inWait">
-				            }
-
-				            <label for="inWait">Не начато</label>
-			            </div>
-			            <div>
-				            @if (Model.Status == TaskStatus.InProgress)
-				            {
-					            <input asp-for="Status" value="0" type="radio" name="status" id="inProgress" checked>
-				            }
-				            @if (Model.Status != TaskStatus.InProgress)
-				            {
-					            <input asp-for="Status" value="0" type="radio" name="status" id="inProgress">
-				            }
-				            <label for="inProgress">В процессе</label>
-			            </div>
-			            <div>
-				            @if (Model.Status == TaskStatus.Done)
-				            {
-					            <input asp-for="Status" value="1" type="radio" name="status" id="done" checked>
-				            }
-				            @if (Model.Status != TaskStatus.Done)
-				            {
-					            <input asp-for="Status" value="1" type="radio" name="status" id="done">
-				            }
-				            <label for="done">Готово</label>
-			            </div>
-		            </div>
-
-		            <div class="form-group">
-			            <label>Описание</label>
-			            <div><span asp-validation-for="Description"></span></div>
-			            <textarea asp-for="Description" class="form-control" rows="3"></textarea>
-		            </div>
-
-
-		            <br>
-
-		            <button class="button" type="submit">Редактировать</button>
-		            <a asp-action="CancelTask" asp-route-boardId="@ViewBag.boardId" class="btn btn-primary m-2 p-2">Отмена</a>
-	            </form>
+	                <form asp-action="UpdateTask" asp-route-boardId="@ViewBag.boardId" method="post" enctype="multipart/form-data" class="p-2">
+		                 @await  Html.PartialAsync("TaskFormRartial")
+		                <button class="button" type="submit">Редактировать</button>
+		                <a asp-action="CancelTask" asp-route-boardId="@ViewBag.boardId" class="btn btn-primary m-2 p-2">Отмена</a>
+	                </form>
 	            }
         </div>
     </div>
