--- a/Mandatum/UI/Views/Board/KanbanColumnPatrial.cshtml
+++ b/Mandatum/UI/Views/Board/KanbanColumnPatrial.cshtml
@@ -16,7 +16,7 @@
         }
         @foreach (var taskModel in Model.Item2)
         {
-            <div><a asp-action="EditTask" asp-route-task="@taskModel" asp-route-taskId="@taskModel.Id" asp-route-boardId="@ViewBag.boardId"  class="button style2">@taskModel.Topic</a></div>
+            <div><a asp-action="EditTask" asp-route-taskModel="@taskModel" asp-route-taskId="@taskModel.Id" asp-route-boardId="@ViewBag.boardId"  class="button style2">@taskModel.Topic</a></div>
             <br>
         }
 
