--- a/Mandatum/UI/Views/Board/TaskFormRartial.cshtml
+++ b/Mandatum/UI/Views/Board/TaskFormRartial.cshtml
@@ -2,6 +2,7 @@
 
 @model TaskModel
 
+<input type="hidden" asp-for="Id" value="@Model.Id" />
 <div class="form-group">
     <label>Имя</label>
     <div><span asp-validation-for="Topic"></span></div>
