--- a/Mandatum/UI/Views/Shared/NavBarPartial.cshtml
+++ b/Mandatum/UI/Views/Shared/NavBarPartial.cshtml
@@ -2,8 +2,13 @@
     <ul>
         <li><a href="@Url.Action("AllBoards", "Board")">Все доски</a></li>
         <li><a href="@Url.Action("CreateBoard", "Board")">Создать доску</a></li>
-        <li> <a href="@Url.Action("Register", "Account")">Регистрация</a></li> 
-        <li> <a href="@Url.Action("Login", "Account")">Войти</a></li> 
-   
+        @if (!Context.User.Identity.IsAuthenticated)
+        {
+            <li> <a href="@Url.Action("Login", "Account")">Войти</a></li>
+        }
+         @if (Context.User.Identity.IsAuthenticated)
+        {
+            <li><a href="@Url.Action("Logout", "Account")">Выйти</a></li>
+        }
     </ul>
-</nav>
+</nav>  
