private and public boards

--- a/Mandatum/UI/Views/Board/CreateBoard.cshtml
+++ b/Mandatum/UI/Views/Board/CreateBoard.cshtml
@@ -25,13 +25,13 @@
 					<div class="form-group">
 						<div class="row aln-center">
 							<div>
-							<input asp-for="Privacy" value="1" type="radio" name="privacy" id="private" checked>
+							<input asp-for="Privacy" value="True" type="radio" name="privacy" id="private">
 							<label for="private">Приватная</label>
 							</div>
 						</div>
 						<div class="row aln-center">
 							<div>
-							<input asp-for="Privacy" value="0" type="radio" name="privacy" id="public">
+							<input asp-for="Privacy" value="False" type="radio" name="privacy" id="public">
 							<label for="public">Публичная</label>
 							</div>
 						</div>
