board and task controllers, boardViewModel

--- a/Mandatum/UI/Views/Board/AllBoards.cshtml
+++ b/Mandatum/UI/Views/Board/AllBoards.cshtml
@@ -15,8 +15,8 @@
             {
                 <div class="col-4 col-12-medium">
                     <section class="highlight">
-                        <a asp-action="OpenBoard" asp-route-boardId="@boardModel.Id" asp-route-boardFormat="@boardModel.Format" class="image featured"><img src="/images/kanban.png" alt="@boardModel.Name"/></a>
-                        <a asp-action="OpenBoard" asp-route-boardId="@boardModel.Id" asp-route-boardFormat="@boardModel.Format" class="button style1">@boardModel.Name</a>
+                        <a asp-action="OpenBoard" asp-route-boardId="@boardModel.Id" class="image featured"><img src=@($"/images/{boardModel.Format}.png") alt="@boardModel.Name"/></a>
+                        <a asp-action="OpenBoard" asp-route-boardId="@boardModel.Id" class="button style1">@boardModel.Name</a>
                     </section>
                 </div>
             }
