--- a/Mandatum/UI/Views/Board/CreateBoard.cshtml
+++ b/Mandatum/UI/Views/Board/CreateBoard.cshtml
@@ -42,7 +42,7 @@
 								<div class="row aln-center">
 									<div class="col-4 col-12-medium">
 										<section class="highlight">
-											<a class="image featured"><img src="/images/kanban.png" alt="Канбан доска"/></a>
+											<a class="image featured"><img src="/images/KanbanBoard.png" alt="Канбан доска"/></a>
 											<div>
 												<input asp-for="Format" value="0" type="radio" name="format" id="kanban" checked>
 												<label for="kanban">Канбан доска</label>
@@ -51,7 +51,7 @@
 									</div>
 									<div class="col-4 col-12-medium">
 										<section class="highlight">
-											<a class="image featured"><img src="/images/graph.png" alt="Граф"/></a>
+											<a class="image featured"><img src="/images/Graph.png" alt="Граф"/></a>
 											<div>
 												 <input asp-for="Format" value="1" type="radio" name="format" id="graph">
 												 <label for="graph">Граф</label>
