--- a/Mandatum/UI/Views/Board/CreateBoard.cshtml
+++ b/Mandatum/UI/Views/Board/CreateBoard.cshtml
@@ -51,10 +51,10 @@
 									</div>
 									<div class="col-4 col-12-medium">
 										<section class="highlight">
-											<a class="image featured"><img src="/images/Graph.png" alt="Граф"/></a>
+											<a class="image featured"><img src="/images/Table.png" alt="Таблица"/></a>
 											<div>
-												 <input asp-for="Format" value="1" type="radio" name="format" id="graph">
-												 <label for="graph">Граф</label>
+												 <input asp-for="Format" value="1" type="radio" name="format" id="table">
+												 <label for="table">Таблица</label>
 											</div>
 										</section>
 									</div>
