--- a/Mandatum/UI/wwwroot/css/main.css
+++ b/Mandatum/UI/wwwroot/css/main.css
@@ -37,6 +37,9 @@ table {
 	border-left: 5px solid #1f232b;
 	border-right: 5px solid #1f232b;
 	/*background: #aaaaaa;*/
+	text-align: center;
+	font-size: 100%;
+	font: inherit;
 }
 td {
 	padding: 5px;
