--- a/Mandatum/UI/Views/Task/TaskFormRartial.cshtml
+++ b/Mandatum/UI/Views/Task/TaskFormRartial.cshtml
@@ -51,5 +51,11 @@
     <label>Описание</label>
     <div><span asp-validation-for="Description"></span></div>
     <textarea asp-for="Description" class="form-control" rows="3"></textarea>
+     <label>Исполнители</label>
+    <div><span asp-validation-for="Executors"></span></div>
+    <textarea asp-for="Executors" class="form-control" rows="3"></textarea>
+     <label>Дедлайн</label>
+    <div><span asp-validation-for="Deadline"></span></div>
+    <textarea asp-for="Deadline" class="form-control" rows="3"></textarea>
 </div>
 <br>
