--- a/Mandatum/UI/Views/Board/CreateBoard.cshtml
+++ b/Mandatum/UI/Views/Board/CreateBoard.cshtml
@@ -13,11 +13,12 @@
 			<div class="row aln-center">
 				<form asp-action="SaveBoard" method="post" enctype="multipart/form-data" class="p-2">
 					<div class="form-group">
+						 <div class="validation" asp-validation-summary="ModelOnly"></div>
 						<div class="row aln-center">
 							<div>
 								<label>Имя</label>
-                                <div><span asp-validation-for="Name"></span></div>
-                                <input asp-for="Name" class="form-control" type="text" value="">
+								<div><span asp-validation-for="Name"></span></div>
+								<input asp-for="Name" class="form-control" type="text" value="">
 							</div>
 						</div>
 					</div>
