--- a/Mandatum/UI/Views/Task/TaskFormRartial.cshtml
+++ b/Mandatum/UI/Views/Task/TaskFormRartial.cshtml
@@ -4,6 +4,7 @@
 
 <input type="hidden" asp-for="Id" value="@Model.Id" />
 <div class="form-group">
+     <div class="validation" asp-validation-summary="ModelOnly"></div>
     <label>Имя</label>
     <div><span asp-validation-for="Topic"></span></div>
     <input asp-for="Topic" class="form-control" type="text">
@@ -14,11 +15,11 @@
     <div>
         @if (Model.Status == TaskStatus.InWait)
         {
-        	<input asp-for="Status" value="2" type="radio" name="status" id="inWait" checked>
+            <input asp-for="Status" value="2" type="radio" name="status" id="inWait" checked>
         }
         @if (Model.Status != TaskStatus.InWait)
         {
-        	<input asp-for="Status" value="2" type="radio" name="status" id="inWait">
+            <input asp-for="Status" value="2" type="radio" name="status" id="inWait">
         }
 
         <label for="inWait">Не начато</label>
@@ -26,35 +27,36 @@
     <div>
         @if (Model.Status == TaskStatus.InProgress)
         {
-        	<input asp-for="Status" value="0" type="radio" name="status" id="inProgress" checked>
+            <input asp-for="Status" value="0" type="radio" name="status" id="inProgress" checked>
         }
         @if (Model.Status != TaskStatus.InProgress)
         {
-        	<input asp-for="Status" value="0" type="radio" name="status" id="inProgress">
+            <input asp-for="Status" value="0" type="radio" name="status" id="inProgress">
         }
         <label for="inProgress">В процессе</label>
     </div>
     <div>
         @if (Model.Status == TaskStatus.Done)
         {
-        	<input asp-for="Status" value="1" type="radio" name="status" id="done" checked>
+            <input asp-for="Status" value="1" type="radio" name="status" id="done" checked>
         }
         @if (Model.Status != TaskStatus.Done)
         {
-        	<input asp-for="Status" value="1" type="radio" name="status" id="done">
+            <input asp-for="Status" value="1" type="radio" name="status" id="done">
         }
         <label for="done">Готово</label>
     </div>
 </div>
 
 <div class="form-group">
+    <div class="validation" asp-validation-summary="ModelOnly"></div>
     <label>Описание</label>
     <div><span asp-validation-for="Description"></span></div>
     <textarea asp-for="Description" class="form-control" rows="3"></textarea>
-     <label>Исполнители</label>
+    <label>Исполнители</label>
     <div><span asp-validation-for="Executors"></span></div>
     <textarea asp-for="Executors" class="form-control" rows="3"></textarea>
-     <label>Дедлайн</label>
+    <label>Дедлайн</label>
     <div><span asp-validation-for="Deadline"></span></div>
     <textarea asp-for="Deadline" class="form-control" rows="3"></textarea>
 </div>
