--- a/Mandatum/UI/Views/Shared/KanbanColumnPatrial.cshtml
+++ b/Mandatum/UI/Views/Shared/KanbanColumnPatrial.cshtml
@@ -18,7 +18,9 @@
         }
         @foreach (var taskModel in Model.Item2.Tasks.Where(task => task.Status == Model.Item1))
         {
-            <div><a asp-action="EditTask" asp-controller="Task" asp-route-taskId="@taskModel.Id" asp-route-boardId="@Model.Item2.Board.Id" class="button style2">@taskModel.Topic</a></div>
+            <div><a asp-action="EditTask" asp-controller="Task" asp-route-taskId="@taskModel.Id" asp-route-boardId="@Model.Item2.Board.Id" class="button style2">@taskModel.Topic</a>
+                <a asp-action="DeleteTask" asp-controller="Task" asp-route-taskId="@taskModel.Id" asp-route-boardId="@Model.Item2.Board.Id" class="fa fa-minus-square" aria-hidden="true" style="cursor:pointer;color: #f98780"></a>
+            </div>
             <br>
         }
 
