--- a/Mandatum/UI/Views/Shared/TablePartial.cshtml
+++ b/Mandatum/UI/Views/Shared/TablePartial.cshtml
@@ -11,6 +11,7 @@
     <h2>Ваши задачи</h2>
     </header>
     <tr>
+        <th></th>
         <th>Название</th>
         <th>Статус</th>
         <th>Описание</th>
@@ -18,8 +19,11 @@
     </tr>
     @foreach (var taskModel in Model.Tasks)
     {
-        <tr><td><a asp-action="EditTask" asp-controller="Task" asp-route-taskId="@taskModel.Id" asp-route-boardId="@Model.Board.Id" class="actions">@taskModel.Topic</a>
-                    </td><td>@taskModel.Status</td><td>@taskModel.Description</td><td>@taskModel.Deadline</td></tr>
+        <tr><td><a asp-action="DeleteTask" asp-controller="Task" asp-route-taskId="@taskModel.Id"
+                asp-route-boardId="@Model.Board.Id" class="fa fa-minus-square" aria-hidden="true" style="cursor:pointer;color: #f98780"></a>
+                </td><td><a asp-action="EditTask" asp-controller="Task" asp-route-taskId="@taskModel.Id" asp-route-boardId="@Model.Board.Id" class="actions">@taskModel.Topic</a>
+            </td><td>@taskModel.Status</td><td>@taskModel.Description</td><td>@taskModel.Deadline</td>
+        </tr>
     }
 </table>
 
