--- a/Mandatum/UI/Views/Shared/TablePartial.cshtml
+++ b/Mandatum/UI/Views/Shared/TablePartial.cshtml
@@ -14,7 +14,7 @@
         <th>Название</th>
         <th>Статус</th>
         <th>Описание</th>
-        <th>Когда дана</th>
+        <th>Дедлайн</th>
     </tr>
     @foreach (var taskModel in Model.Tasks)
     {
