--- a/Mandatum/UI/Views/Account/Login.cshtml
+++ b/Mandatum/UI/Views/Account/Login.cshtml
@@ -32,6 +32,7 @@
                         <label>или</label>
                         <a asp-action="Register" asp-controller="Account">Зарегестрироваться</a>
                         <a asp-action="GoogleLogin" asp-controller="Account">Войти через Google</a>
+                        <a asp-action="GithubLogin" asp-controller="Account">Войти через GitHub</a>
                     </div>
                 </form>
             </div>
