--- a/Mandatum/UI/Views/Account/Login.cshtml
+++ b/Mandatum/UI/Views/Account/Login.cshtml
@@ -40,6 +40,9 @@
                         <div>
                             <a asp-action="Register" asp-controller="Account">Зарегестрироваться</a>
                         </div>
+                        <div>
+                            <a asp-action="GithubLogin" asp-controller="Account">Войти через Git</a>
+                        </div>
                         
                        
                     </div>
