--- a/Mandatum/UI/Views/Account/Login.cshtml
+++ b/Mandatum/UI/Views/Account/Login.cshtml
@@ -17,13 +17,13 @@
                     <div>
                         <div class="form-group">
                             <label asp-for="Email">Введите Email</label>
+                            <span asp-validation-for="Email" class="label error"></span>
                             <input type="text" asp-for="Email"/>
-                            <span asp-validation-for="Email"/>
                         </div>
                         <div class="form-group">
                             <label asp-for="Password">Введите пароль</label>
+                            <span asp-validation-for="Password" class="label error"></span>
                             <input asp-for="Password"/>
-                            <span asp-validation-for="Password"/>
                         </div>
                         <br>
                         <div class="row aln-center">
