--- a/Mandatum/UI/Views/Account/Register.cshtml
+++ b/Mandatum/UI/Views/Account/Register.cshtml
@@ -16,18 +16,18 @@
                     <div>
                         <div class="form-group">
                             <label asp-for="Email">Введите Email</label>
+                            <span asp-validation-for="Email" class="label error"></span>
                             <input type="text" asp-for="Email"/>
-                            <span asp-validation-for="Email"/>
                         </div>
                         <div class="form-group">
                             <label asp-for="Password">Введите пароль</label>
+                            <span asp-validation-for="Password" class="label error"></span>
                             <input asp-for="Password"/>
-                            <span asp-validation-for="Password"/>
                         </div>
                         <div class="form-group">
                             <label asp-for="ConfirmPassword">Повторите пароль</label>
+                            <span asp-validation-for="ConfirmPassword" class="label error"></span>
                             <input asp-for="ConfirmPassword"/>
-                            <span asp-validation-for="ConfirmPassword"/>
                         </div>
                         <div>
                             <label></label>
