--- a/Mandatum/UI/Views/Task/EditTask.cshtml
+++ b/Mandatum/UI/Views/Task/EditTask.cshtml
@@ -12,7 +12,7 @@
 			@if (Model.Method == "CreateTask")
 			{
 				<form asp-action="SaveTask" asp-route-boardId="@Model.BoardId" method="post" enctype="multipart/form-data" class="p-2">
-					@await Html.PartialAsync("TaskFormRartial", Model.TaskModel)
+					@await Html.PartialAsync("TaskFormPartial", Model.TaskModel)
 					<button class="button" type="submit">Сохранить</button>
 					<a asp-action="CancelTask" asp-route-boardId="@Model.BoardId" class="btn btn-primary m-2 p-2">Отмена</a>
 				</form>
@@ -21,7 +21,7 @@
 			@if (Model.Method == "EditTask")
 			{
 				<form asp-action="UpdateTask" asp-route-boardId="@Model.BoardId" method="post" enctype="multipart/form-data" class="p-2">
-					@await Html.PartialAsync("TaskFormRartial", Model.TaskModel)
+					@await Html.PartialAsync("TaskFormPartial", Model.TaskModel)
 					<button class="button" type="submit">Редактировать</button>
 					<a asp-action="CancelTask" asp-route-boardId="@Model.BoardId" class="btn btn-primary m-2 p-2">Отмена</a>
 				</form>
