--- a/Mandatum/UI/Views/Task/TaskFormPartial.cshtml
+++ b/Mandatum/UI/Views/Task/TaskFormPartial.cshtml
@@ -6,7 +6,7 @@
 <div class="form-group">
      <div class="validation" asp-validation-summary="ModelOnly"></div>
     <label>Имя</label>
-    <div><span asp-validation-for="Topic"></span></div>
+    <div><span asp-validation-for="Topic" class="label error"></span></div>
     <input asp-for="Topic" class="form-control" type="text">
 </div>
 
