--- a/Mandatum/UI/wwwroot/css/main.css
+++ b/Mandatum/UI/wwwroot/css/main.css
@@ -33,6 +33,10 @@ label{
 	font: inherit;
 	vertical-align: baseline;
 }
+
+.label.error{
+	color: #d96760;
+}
 table {
 	border-left: 5px solid #1f232b;
 	border-right: 5px solid #1f232b;
