--- a/Mandatum/UI/wwwroot/css/main.css
+++ b/Mandatum/UI/wwwroot/css/main.css
@@ -37,22 +37,31 @@ label{
 .label.error{
 	color: #d96760;
 }
+
+.actions{
+	color: #1f232b;
+}
+
 table {
-	border-left: 5px solid #1f232b;
-	border-right: 5px solid #1f232b;
-	/*background: #aaaaaa;*/
+	border-left: 2px solid #484d55;
+	border-right: 2px solid #484d55;
+	color: #484d55;
 	text-align: center;
 	font-size: 100%;
 	font: inherit;
+	margin-left: auto;
+	margin-right: auto;
 }
 td {
 	padding: 5px;
-	border: 5px solid #1f232b;
+	border: 2px solid #484d55;
 }
 th{
 	padding: 5px;
-	border: 5px solid #1f232b;
+	border: 2px solid #484d55;
+	background: #e97770;
 }
+
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;}
