--- a/Mandatum/UI/Views/Shared/Table.cshtml
+++ b/Mandatum/UI/Views/Shared/Table.cshtml
@@ -1,7 +1,7 @@
 ﻿@model BoardViewModel
 <section id="highlights" class="wrapper style2">
     <div class="container">
-        <div class="row aln-center">
+        <div class="align-center">
             @await Html.PartialAsync("TablePartial")
         </div>
     </div>
