--- a/Mandatum/UI/Views/Shared/TablePartial.cshtml
+++ b/Mandatum/UI/Views/Shared/TablePartial.cshtml
@@ -41,5 +41,5 @@
     }
 </table>
 
-    <a asp-action="CreateTask" asp-controller="Task" asp-route-boardId="@Model.Board.Id"  class="button">Новая задача</a>
+    <a asp-action="CreateTask" asp-controller="Task" asp-route-boardId="@Model.Board.Id"  class="button style3">Новая задача</a>
 </body>
