--- a/Mandatum/UI/wwwroot/css/main.css
+++ b/Mandatum/UI/wwwroot/css/main.css
@@ -62,6 +62,14 @@ th{
 	background: #e97770;
 }
 
+.align-center{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;}
@@ -273,6 +281,7 @@ input[type="radio"]:checked + label:after {
 		margin: 0 auto;
 		max-width: 100%;
 		width: 68em;
+		justify-content: center;
 	}
 
 		@media screen and (max-width: 1680px) {
