--- a/Mandatum/UI/Views/Shared/KanbanColumnPatrial.cshtml
+++ b/Mandatum/UI/Views/Shared/KanbanColumnPatrial.cshtml
@@ -24,6 +24,6 @@
             <br>
         }
 
-        <a asp-action="CreateTask" asp-controller="Task" asp-route-boardId="@Model.Item2.Board.Id" asp-route-taskStatus="@Model.Item1" class="button">Новая задача</a>
+        <a asp-action="CreateTask" asp-controller="Task" asp-route-boardId="@Model.Item2.Board.Id" asp-route-taskStatus="@Model.Item1" class="button style3">Новая задача</a>
     </section>
 </div>
