--- a/Mandatum/UI/Views/Account/Login.cshtml
+++ b/Mandatum/UI/Views/Account/Login.cshtml
@@ -10,7 +10,7 @@
         <div class="title">Вход</div>
         
         <div class="container">
-            <div class="row aln-center">
+            <div class="align-center">
                 
                 <form asp-action="Login" asp-controller="Account" asp-anti-forgery="true">
                     <div class="validation" asp-validation-summary="ModelOnly"></div>
@@ -26,25 +26,17 @@
                             <input asp-for="Password"/>
                         </div>
                         <br>
-                        <div class="row aln-center">
-                            <div>
-                                   <input type="submit" value="Войти в аккаунт" class="button"/>
-                            </div>
-                        </div>
-                        <div>
+                        <div class="align-center">
+                            
+                            <input type="submit" value="Войти в аккаунт" class="button"/>
                             <label>или</label>
-                        </div>
-                        <div>
-                             <a asp-action="GoogleLogin" asp-controller="Account">Войти через Google</a>
-                        </div>
-                        <div>
-                            <a asp-action="Register" asp-controller="Account">Зарегестрироваться</a>
-                        </div>
-                        <div>
+                            <a asp-action="GoogleLogin" asp-controller="Account">Войти через Google</a>
                             <a asp-action="GithubLogin" asp-controller="Account">Войти через Git</a>
                         </div>
-                        
-                       
+                        <br>
+                        <div class="align-center">
+                             <a asp-action="Register" asp-controller="Account">Зарегестрироваться</a>
+                        </div>
                     </div>
                 </form>
             </div>
