--- a/Mandatum/UI/Views/Account/Register.cshtml
+++ b/Mandatum/UI/Views/Account/Register.cshtml
@@ -10,7 +10,7 @@
         <div class="title">Регистрация</div>
         
         <div class="container">
-            <div class="row aln-center">
+            <div class="align-center">
                 <form asp-action="Register" asp-controller="Account" asp-anti-forgery="true">
                     <div class="validation" asp-validation-summary="ModelOnly"></div>
                     <div>
@@ -29,9 +29,9 @@
                             <span asp-validation-for="ConfirmPassword" class="label error"></span>
                             <input asp-for="ConfirmPassword"/>
                         </div>
-                        <div>
-                            <label></label>
-                            <input type="submit" value="Зарегистрироваться" class="btn btn-outline-dark"/>
+                        <br>
+                        <div class="align-center">
+                            <input type="submit" value="Зарегистрироваться" class="button"/>
                         </div>
                     </div>
                 </form>
