login and register form

--- a/Mandatum/UI/Views/Account/Login.cshtml
+++ b/Mandatum/UI/Views/Account/Login.cshtml
@@ -28,10 +28,10 @@
                         <br>
                         <div class="align-center">
                             
-                            <input type="submit" value="Войти в аккаунт" class="button"/>
+                            <input type="submit" value="Войти в аккаунт" class="button login"/>
                             <label>или</label>
-                            <a asp-action="GoogleLogin" asp-controller="Account">Войти через Google</a>
-                            <a asp-action="GithubLogin" asp-controller="Account">Войти через Git</a>
+                            <a asp-action="GoogleLogin" asp-controller="Account" class="button style2 login"><img class="image img" src="/images/google_colored.png" alt="">     Войти через Google</a>
+                            <a asp-action="GithubLogin" asp-controller="Account" class="button style2 login"><img class="image img" src="/images/git.png" alt="">     Войти через Git</a>
                         </div>
                         <br>
                         <div class="align-center">
