--- a/Mandatum/UI/Views/Account/Register.cshtml
+++ b/Mandatum/UI/Views/Account/Register.cshtml
@@ -31,7 +31,7 @@
                         </div>
                         <br>
                         <div class="align-center">
-                            <input type="submit" value="Зарегистрироваться" class="button"/>
+                            <input type="submit" value="Зарегистрироваться" class="button login"/>
                         </div>
                     </div>
                 </form>
